# your-agent

./: api.py  config.py  folder-structure.txt  frontend.py  main.py  pyproject.toml  readme.md  requirements.txt
data/: luminas.com.processed_pages.db  luminas.com.scraper.db  luminas.com.vector.index
data_processing/: chunk.py  clean.py  embed.py  normalize.py  pipeline.py  save.py  vectorstore.py
llm/: llm_model.py
utils/: helpers.py  logger.py  retry.py
web_scraper/: folder-structure.txt  scraper_runner.py  view_db.py
web_scraper/crawler/: crawler.py  queue_manager.py  url_utils.py
web_scraper/output/luminas.com/: scraped_worker_0.txt  scraped_worker_1.txt  scraped_worker_2.txt  scraped_worker_3.txt  scraped_worker_4.txt  scraped_worker_5.txt  scraped_worker_6.txt  scraped_worker_7.txt  scraped_worker_8.txt  scraped_worker_9.txt
web_scraper/scraper/: content_extractor.py  playwright_utils.py  scraper_worker.py
web_scraper/storage/: db_manager.py  models.py
